# Hydrosphere

./: .gitignore  .gitmodules  .travis.yml  LICENSE-MIT  Makefile  README.md  annotated.html  classes.html  classhs_1_1Result-members.html  classhs_1_1Result.html  classhs_1_1os_1_1ConditionVariableImpl-members.html  classhs_1_1os_1_1ConditionVariableImpl.html  classhs_1_1os_1_1CriticalSection-members.html  classhs_1_1os_1_1CriticalSection.html  classhs_1_1svc_1_1Handle-members.html  classhs_1_1svc_1_1Handle.html  classhs_1_1util_1_1IntrusiveList-members.html  classhs_1_1util_1_1IntrusiveList.html  classhs_1_1util_1_1IntrusiveListElement-members.html  classhs_1_1util_1_1IntrusiveListElement.html  classhs_1_1util_1_1IntrusiveList_1_1const__iterator-members.html  classhs_1_1util_1_1IntrusiveList_1_1const__iterator.html  classhs_1_1util_1_1IntrusiveList_1_1iterator-members.html  classhs_1_1util_1_1IntrusiveList_1_1iterator.html  classhs_1_1util_1_1Optional-members.html  classhs_1_1util_1_1Optional.html  diag_8hpp.html  diag_8hpp_source.html  diag__api_8hpp.html  diag__api_8hpp_source.html  diag__macro_8hpp.html  diag__macro_8hpp_source.html  dir_075662c8fa14ff03029d170a6e7479ee.html  dir_113c84bcb1e1336ecfc5c641643e1bd7.html  dir_3f1da0f3e4d22f90beba39fd619c7b7e.html  dir_5af75705862e99358848d7ee2480bd4d.html  dir_6960c5516eba307b3cb3de5de97ba480.html  dir_f362f964b6a586a91055c830e71f5195.html  dir_f87826bb08373946194dead706fb5bb3.html  files.html  (+150 more)
application-template/: exported.txt  meson.build
application-template/source/: main.cpp
helper/: dummy-cross  meson.build  meson_options.txt
helper/linker-scripts/aarch32/: module.ld
helper/linker-scripts/aarch64/: module.ld
helper/meson/cross/: aarch32-nx  aarch32-nx.in  aarch64-nx  aarch64-nx.in
libhydrosphere/: CPPLINT.cfg  exported.txt  fix_codestyle  meson.build
libhydrosphere/doc/: Doxyfile.in  meson.build
libhydrosphere/include/hs/: diag.hpp  hs_config.hpp  hs_macro.hpp  hs_result.hpp  mem.hpp  os.hpp  svc.hpp  util.hpp
libhydrosphere/include/hs/diag/: diag_api.hpp  diag_macro.hpp
libhydrosphere/include/hs/mem/: allocator.hpp  memory_allocator.hpp  memory_api.hpp  memory_default_delete.hpp  shared_ptr.hpp  unique_ptr.hpp
libhydrosphere/include/hs/os/: os_api.hpp  os_barrier_api.hpp  os_condition_variable_api.hpp  os_condition_variable_impl.hpp  os_critical_section.hpp  os_ipc.hpp  os_kernel_event_api.hpp  os_mutex_api.hpp  os_thread_api.hpp  os_tls.hpp  os_types.hpp  os_user_event_api.hpp
libhydrosphere/include/hs/os/ipc/: ipc_buffer.hpp  ipc_tempate.hpp  ipc_template.hpp
libhydrosphere/include/hs/svc/: svc_api-aarch32.hpp  svc_api-aarch64.hpp  svc_api.hpp  svc_types.hpp
libhydrosphere/include/hs/util/: util_api.hpp  util_array.hpp  util_intrusive_list.hpp  util_object_storage.hpp  util_optional.hpp  util_std_new.hpp  util_template_api.hpp
libhydrosphere/source/aarch32/: svc.s
libhydrosphere/source/aarch64/: svc.s
libhydrosphere/source/common/compiler/: allocator.cpp  memcpy.cpp  shared_ptr.cpp  unique_ptr.cpp
libhydrosphere/source/common/diag/: diag_api.cpp
libhydrosphere/source/common/init/: initialization.cpp  module_requirements.cpp
libhydrosphere/source/common/os/: os_barrier_api.cpp  os_condition_variable_api.cpp  os_condition_variable_impl.cpp  os_critical_section.cpp  os_kernelevent_api.cpp  os_mutex_api.cpp  os_thread_api.cpp  os_tls.cpp  os_userevent_api.cpp
libhydrosphere/source/common/os/detail/: os_threadlist.cpp  os_threadlist.hpp  os_virtualmemory_allocator.cpp  os_virtualmemory_allocator.hpp
libhydrosphere/source/common/util/: util_string_api.cpp  util_string_api.hpp
module-runtime/: meson.build
module-runtime/source/: crt0.s  default_definition.cpp
search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  (+72 more)
