# Copyright (c) 2019 Hydrosphère Developers
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

project('helper')

install_subdir('linker-scripts', install_dir : get_option('datadir'), strip_directory : false)
install_subdir('meson', install_dir : get_option('datadir'), strip_directory : false)
